//
// Copyright 2016, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.base;

option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "BusinessFailureProto";
option java_package = "org.spine3.base";

option (type_url_prefix) = "type.spine3.org";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

import "spine/annotations.proto";

// A business failure is a condition in business, which does not allow to
// satisfy a request or perform an operation.
//
// Examples: unsuccessful credit card validation, insufficient items in stock, incomplete order data.
//
// See `spine.base.Error` for definition of a technical error.
//
message Failure {
    // The instance of the failure generated by an aggregate or another part of business logic code.
    google.protobuf.Any instance = 1;

    // A stacktrace of from the code, which generated the failure instance (if available).
    string stacktrace = 2;

    // The moment when the failure instance (not this message) was created.
    google.protobuf.Timestamp timestamp = 3;

    // Additional information on the failure.
    map<string, google.protobuf.Value> attributes = 4;
}

// A failure to handle a command because an entity contains a value different than requested in a command.
message ValueMismatch {
    // An expected value.
    // This field is not populated if the command expects to initialize the attribute.
    google.protobuf.Any expected = 1;

    // An actual value in the entity.
    // This field is not populated if the entity does not have the attribute set.
    google.protobuf.Any actual = 2;

    // An optional attribute that may contain a value requested as the replacement
    // for the `expected` value in the failed command.
    google.protobuf.Any requested = 3;

    // A version of the entity, which generated the failure.
    int32 version = 4;
}